build script refactor for closure compiler

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-
 <html id="index" lang="en">
-	
 	<head>
-	
 		<title>Template</title>
 		
 		<meta name="author" content="@AUTHOR@" />
 		<meta name="copyright" content="Copyright @AUTHOR@ @YEAR@. All Rights Reserved." />
-		<meta name="description" content=" A template for HTML/CSS/JavaScript projects" />
+		<meta name="description" content="A template for HTML/CSS/JavaScript projects" />
 	
 		<link rel="shortcut icon" href="img/favicon.ico"/>
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
@@ -26,29 +23,22 @@
 		<!--[END]-->
 		
 		<script src="js/lib/modernizr-1.7.min.js"></script>
-		
 	</head>
-	
 	<body>
-		
 		<h1>Springboard</h1>
 		<h2>Project template with CSS minification, JS compilation and JSDoc generation</h2>
-		<div id="output" />
+		
+		<!-- All Javascript at bottom (except Modernizr) for faster page loading -->		
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
 		<!--[BEGIN:JS:LIB]-->
-		<script src="js/lib/jquery-1.5.min.js"></script>
+		<script src="js/lib/signals.min.js"></script>
 		<!--[END]-->
 		
 		<!--[BEGIN:JS:SRC]-->
-		<script src="js/plugins.js"></script>
-		<script src="js/namespace.js"></script>
-		<script src="js/namespace.Event.js"></script>
-		<script src="js/namespace.project.Controller.js"></script>
-		<script src="js/namespace.project.Model.js"></script>
-		<script src="js/namespace.project.View.js"></script>
-		<script src="js/namespace.project.App.js"></script>
+		<script src="../lib/google-closure-library/closure/goog/base.js"></script>
+		<script src="js/deps.js"></script>
+		<script src="js/loader.js"></script>
 		<!--[END]-->
-		
 	</body>
-	
 </html>
