remove closure library, cleanup and build

--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,17 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
 		<!--[BEGIN:JS:LIB]-->
+		<script src="js/lib/log.js"></script>
 		<script src="js/lib/signals.min.js"></script>
 		<!--[END]-->
 		
 		<!--[BEGIN:JS:SRC]-->
-		<script src="../lib/google-closure-library/closure/goog/base.js"></script>
-		<script src="js/deps.js"></script>
-		<script src="js/loader.js"></script>
+		<script src="js/namespace.js"></script>
+		<script src="js/namespace.project.Controller.js"></script>
+		<script src="js/namespace.project.Model.js"></script>
+		<script src="js/namespace.project.View.js"></script>
+		<script src="js/namespace.project.App.js"></script>
+		<script src="js/init.js"></script>
 		<!--[END]-->
 	</body>
 </html>
