update log, Modernizr, cleanup & build

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="index" lang="en">
+<html lang="en">
 	<head>
 		<title>Template</title>
 		
@@ -9,11 +9,7 @@
 	
 		<link rel="shortcut icon" href="img/favicon.ico"/>
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
-		
-		<!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		
+
 		<!--[BEGIN:CSS:LIB]-->
 		<link rel="stylesheet" href="css/lib/reset.css"/>
 		<!--[END]-->
@@ -22,13 +18,13 @@
 		<link rel="stylesheet" href="css/style.css"/>
 		<!--[END]-->
 		
-		<script src="js/lib/modernizr-1.7.min.js"></script>
+		<script src="js/lib/modernizr-2.0.6.min.js"></script>
 	</head>
 	<body>
 		<h1>Springboard</h1>
 		<h2>Project template with CSS minification, JS compilation and JSDoc generation</h2>
 		
-		<!-- All Javascript at bottom (except Modernizr) for faster page loading -->		
+		<!-- All Javascript at bottom (except Modernizr) for faster page loading -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
 		<!--[BEGIN:JS:LIB]-->
@@ -38,10 +34,10 @@
 		
 		<!--[BEGIN:JS:SRC]-->
 		<script src="js/namespace.js"></script>
-		<script src="js/namespace.project.Controller.js"></script>
+		<script src="js/namespace.project.App.js"></script>
 		<script src="js/namespace.project.Model.js"></script>
 		<script src="js/namespace.project.View.js"></script>
-		<script src="js/namespace.project.App.js"></script>
+		<script src="js/namespace.project.Controller.js"></script>
 		<script src="js/init.js"></script>
 		<!--[END]-->
 	</body>
