--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
 		<!--[BEGIN:JS:LIB]-->
-		<script src="js/lib/log.js"></script>
+		<script src="js/lib/log.min.js"></script>
 		<script src="js/lib/signals.min.js"></script>
 		<!--[END]-->
 		
